fix: z-index
feat: manage z-index of elements depending on user action.

--- a/client/src/utils/styles/HoverSparkleAnim.module.css
+++ b/client/src/utils/styles/HoverSparkleAnim.module.css
@@ -10,6 +10,17 @@
 
 .sparkle {
   display: none;
+  animation: fadeToHide 0.3s ease-out forwards;
+}
+
+@keyframes fadeToHide {
+  0% {
+    display: flex;
+  }
+
+  100% {
+    opacity: 0;
+  }
 }
 
 @keyframes smootheScaling {
